welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: not found: value bb
  if (a <= 10*b || a <= 10*c || b <= 10*a || bb <= 10*c || c <= 10*b || c <= 10*a ) {
                                             ^